# sandol_kakao_bot_service

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0597f17cc64d_.py  1c33e4342311_init.py  360c2c6b25e1_update_user_model_for_keycloak_mapping.py  6407cf972fec_create_user_table.py  74ec16c8761c_create_user_table.py  88c25e6a54f1_.py
app/: __init__.py  admin_auth.py  database.py
app/config/: __init__.py  blocks.py  config.py
app/models/: __init__.py  admin.py  user.py  users.py
app/routers/: __init__.py  classroom.py  meal.py  notice.py  statics.py  user.py
app/schemas/: __init__.py  auth.py  base.py  classroom.py  classroom_timetable.py  meals.py  notice.py  statics.py  user.py  users.py
app/services/: __init__.py  auth_service.py  authentication_service.py  classroom_timetable_serivce.py  classroom_timetable_service.py  meal_service.py  notice_service.py  static_service.py  user_service.py
app/utils/: __init__.py  auth_client.py  classroom.py  db.py  http.py  kakao.py  lifespan.py  meal.py  notice.py  openapi.py  security.py  statics.py  times.py  user.py
app/validators/: __init__.py  redirects.py
tests/: conftest.py  test_admin_auth.py  test_admin_crud.py  test_http_utils.py  test_kakao_utils.py  test_main_exception_handlers.py
tests/routers/: test_get_login_link.py  test_login_callback.py  test_meal_restaurant.py  test_meal_submit.py  test_meal_view_ordering.py
tests/services/: test_auth_service_phase2.py  test_generate_login_link.py  test_keycloak_admin_lookup.py  test_map_keycloak_user.py  test_meal_service_fetch_restaurants.py  test_user_service_keycloak_auth_failure.py  test_user_service_login_recovery.py
tests/utils/: test_meal_context.py  test_meal_split_string.py  test_shuttle_info_components.py
